--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -193,13 +193,34 @@ NOTES FOR BLACKHATS: P̵̗̽ḫ̵͘i̸̹̓s̵͚̈́h̵̻̕i̸͈͒ṉ̵͘g̸͖̀ ̵
 TORTURE TEST all the different combinations of add market search on the 'portfolio assets' page, in the admin interface.
 
 
-In $ct['api']->ticker_markets_search(), there is a pairings list for coingecko only, for searching coingecko for app ids to add a new asset market. Add this list as a new setting in the 'currency support' admin config section, and include input validation for it.
+For the REMOVE ENTIRE ASSET option, list all assets in the same way we list pairings, AND DISABLE DELETING BITCOIN. Have a PROMINENT NOTE ATOP THE PAGE THAT BITCOIN IS REQUIRED TO HAVE CURRENCY CONVERSIONS WORK.
 
 
-Make sure the market does NOT already exist when adding new ones, and DISALLOW REMOVING ANY BITCOIN MARKETS THAT ********WOULD REMOVE A PAIRING, BECAUSE IT'S THE ONLY MARKET IN THAT PAIRING********** (SO COUNTRY CURRENCY PRICE CONVERSION CAPACITY IS NOT AFFECTED).
+Since we do not allow removing BITCOIN exchanges IF THEY ARE THE FIRST ONE LISTED IN THE INTERFACE FOR REMOVAL, create 'scheduled maintainence' logic that:
+1) checks any BITCOIN pairing THAT ONLY HAS ONE EXCHANGE MARKET
+2) CHECKS FOR VALID INTERNET CONNECTIVITY, BY CHECKING THE DEFAULT BITCOIN CURRECY CONVERSION MARKET (with $ct['conf']['gen']['bitcoin_primary_currency_pair'] / $ct['conf']['gen']['bitcoin_primary_currency_exchange']) WITH CACHE TIME SET TO ZERO (NO CACHE)
+3) IF STEP 1 AND 2 PASS, and the only exchange in step 1 DOES NOT RETURN A NUMERIC VALUE FOR BITCOIN TRADE PRICE AS WELL, BLACKLIST USING THAT EXCHANGE FOR THAT PAIRING (SO ANY CACHED CONFIG REBUILDS NEVER RE-INCLUDE IT), REMOVE IT FROM THE CACHED CONFIG, AND WRITE TO THE ERROR LOG ABOUT THE ISSUE (ONLY DURING THE SCHEDULED MAINTENANCE THAT DOES THIS, SO WE DONT FILL THE LOGS UP)
+
+
+Make sure the market does NOT already exist when adding new ones.
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+Add setting upper / lower case auto-correction for the portfolio assets array keys in config-auto-adjust.php.
+
+
+Create CONFIG backups, using same logic we use for chart backups, EXCEPT WE USE $ct['conf']['sec']['backup_archive_password'] TO EXCRYPT THE ZIP FILE (for security of any sensitive config data).
+
+
+Add admin settings feature to restore chart data from the zip archive backups (with admin authentication ONLY).
+
+
+On the backup / restore admin page, have all the backups (charts / configs) listed, with a dropdown menu next to each for restore / download.
+
+
+Option to use new zip file encryption password feature to encrypt portfolio spreadsheet exports when downloading exported portfolio data (with password entered in the UI, #NOT# $ct['conf']['sec']['backup_archive_password']).
 
 
 HUGE 'TONS OF COOKIE DATA' ISSUE ON SERVERS ALREADY RUNNING #OTHER# WEB APPS (LIKE WORDPRESS) #AT THE SAME TIME / ON SAME DOMAIN# (AS IT CAN GO OVER THE SERVER HEADER LIMIT AND CRASH THE WEB APP LOADING BOTH APP'S COOKIES INTO THE HEADER): Since we already wait for the page to load for initiating batch-grabbing news feeds(?), maybe we can store the user-selected feeds in local storage, since the data set is potentially VERY large (to save alot on cookie header data)? Look over the batch loading logic, and see if we can do it more with JavaScript instead of PHP (except for the ajax calls to the server AFTER we know what was user-chosen). Same should generally go for price charts (as we ALSO load after the page has loaded), so look into that too.
@@ -242,9 +263,6 @@ Defaults to 'standard' if not set.
 
 
 Document the ABOVE new plugin settings, and fully test before public release.
-
-
-Add setting upper / lower case auto-correction for the portfolio assets array keys in config-auto-adjust.php.
 
 
 Add the ability to allow a BLANK single array item admin user input for domains arrays IN THE INTERFACE (strict servers, etc), in the corrisponding admin user input validation files in: /app-lib/php/classes/includes/admin/. Use the same logic we already do this for in other admin input arrays. TEST ALL THESE OUT BY DELETING ALL ITEMS VIA INTERFACE, INCLUDING ALL THE OTHER ONES WE ALREADY SETUP.
@@ -358,22 +376,10 @@ Add a check (every X days with a config setting), to see if a market's trade val
 Admin import / export of settings (consider security implications CAREFULLY...include an optional / mandatory checkbox to encrypt to zip file with our new zip encryption feature).
 
 
-Add admin settings feature to restore chart data from the zip archive backups (with admin authentication ONLY).
-
-
 Add additional ability to do telegram / discord webhooks in the new "crypto-info-bot" plugin, to query asset prices at different exchanges through telegram chat with the chat bot. Example: "/price btc-usd-coinbase"
 
 
 Add openserum markets support.
-
-
-For admin area pages / sections, consider doing subsections in a modal subwindow (like we do for "select charts" on the user area charts page), with iframes for loading through 'wizard' steps or opening different categories. It would possibly keep a native app 'feel' while also reducing admin page load times. Think it over, figure out the best solution here for a great UX.
-
-
-On admin area "assets" page, show EXISTING assets in a expandable / collapsable tree layout, with a checkbox next to each tree item. Also have a select / unselect all button like we do for asset watch-only on the 'update portfolio' user area page (but skip / have as read-only the assets REQUIRED to run this app [bitcoin / miscassets / nfts / etc]). Use this to delete assets / markets we no longer want.
-
-
-On admin "assets" page, add a button atop the page called " Add New Asset Or Market". On page 1 of the 'add asset' wizard (multi-step on separate modal pages), only have the radio selection choices (only one can be selected): 'Add new asset' and 'Add new market to existing asset'. If 'add new asset' is selected, then page 2 has you type in the ticker symbol (otherwise you choose from a list of your already-added assets). After we have the ticker symbol one way or another, we then scan every exchange API, and return results for ALL market pairings of that asset ([greying out / disabling selection of any we ALREADY added] as a checkbox list to choose the ones you want). Should NOT need any more steps than that, keeep it simple as possible.
 
 
 When importing bootstrap price chart data in on XAMMP for Windows, WHEN SETUP FOR 15 MINUTE TASK SCHEDULER INTERVALS INSTEAD OF THE DEFAULT 20 MINUTE INTERVALS, all chart data seemed correct EXCEPT for 2 week data. Try and replicate this on other setups, and review the auto-reset trigger / directory deletion logic for any possible issues, as well as the light chart creation logic. I SUSPECT THE LATTER. 
@@ -471,9 +477,6 @@ Implement 'plugin_deny_additions' / 'plugin_deny_removals' (with same format tha
 Implement a 'plugin version' system, based off the main app's system (if CACHED plugin version is a mismatch to the CURRENT plugin version, trigger a cached config upgrade for non-high security modes).
 
 
-On the backup / restore admin page, have all the backups (charts / configs) listed, with a dropdown menu next to each for restore / download.
-
-
 Add ability to set what decimal and thousands seperators to use, AUTOMATICALLY BASED OF JAVASCRIPT LOCALE like we do for the ticker app (by wrapping all numbers in a class, and converting on document load). Additionally, we can set what locale is used like so: toLocaleString('en')
 
 
@@ -559,9 +562,6 @@ Research the possibility of inter-linking the tracker app into the ticker app, f
 
 
 Look into doing bootstrap modals instead of the current library we use. Maybe it's better?
-
-
-Option to use new zip file encryption password feature to encrypt portfolio spreadsheet exports when downloading exported portfolio data (with password entered in the UI, #NOT# $ct['conf']['sec']['backup_archive_password']).
 
 
 Some of our extra security automation options in FOLIO-INSTALL.bash may also be appropriate for my other auto-installer scripts (ticker / Bluetooth radio)?
