--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6777,7 +6777,11 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 -------------------------------------------------------------------
-6.01.00
+6.00.39
+
+-BUG FIX: Fixed CoinMarketCap.com support
+
+-BUG FIX: Miscellaneous fixes
 
 -Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Portfolio Assets
 
