memory usage optimizations, upgraded kraken API, UX
memory usage optimizations, upgraded kraken API, UX

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6793,6 +6793,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Upgraded Idex exchange API to v4
 
+-Upgraded Kraken exchange API
+
 IMPORTANT *UPGRADE* NOTICES:
 
 v6.00.38 and higher restructures CURRENCY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
