--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,6 +192,21 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+Add checks for 'presale usd', for skipping already-added asset markets, when searching for asset markets to add on the portfolio assets admin page. Currently, it's NOT skipping already-added presale markets.
+
+
+Register / intergrate Kraken's 'search' API endpoint: https://api.kraken.com/0/public/AssetPairs
+
+
+TORTURE TEST all the different combinations of add market search on the 'portfolio assets' page, in the admin interface.
+
+
+Run checks to make sure EVERY REQUIRED BACKEND search result meta data field is filled in (OTHERWISE SKIP SHOWING THAT MARKET AS AN OPTION TO ADD, AND include it in skipped markets list / WRITE TO THE ERROR LOG ABOUT IT [like we already do for pairings in $ct['api']->market_id_parse()]). 
+
+
+Add the generic table sorter to the asset list on the admin portfolio assets page. Refactor the default sort to accommodate for only sorting the first column (instead of the first two we sort in access stats table data).
+
+
 On the portfolio updates user area page, AND the portfolio assets admin page, include a warning about saving too many coins in cookie mode, which can crash the app until some cookies are deleted.
 
 
@@ -209,34 +224,6 @@ Exchange Markets (number of, with info icon bubble showing a detailed list on ho
 For the asset "name", we want to pre-populate it, yet still have it editable by the end user. Make sure the user knows adding a coingecko market will auto-name assets much better than skipping coingecko markets. Additionally, we want to only allow alphanumeric and a few symbols like hyphen, period, colon, etc. User input should be validated on the front end with JavaScript, and the back end with PHP. The name should also use htmlspecailcharacters for security, like we use for the user agent string on the access stats page.
 
 
-Add our memory-freeing calls near the end of each of our ticker search related functions.
-
-
-Add 'FDUSD' / 'CBBTC' to 'other pairings' on 'currency support' page.
-
-
-Migrate Kraker API to use their 'all tickers' endpoint: https://api.kraken.com/0/public/Ticker
-
-
-Register / intergrate Kraken's 'search' API endpoint: https://api.kraken.com/0/public/AssetPairs
-
-
-Add to power user config:
-
-'jupiter_ag_search_mode'
-
-'exchange_search_cache_time'
-
-
-TORTURE TEST all the different combinations of add market search on the 'portfolio assets' page, in the admin interface.
-
-
-IN THE INTERFACING, make sure the market does NOT already exist when allowing addition of new ones. We have 'already_added' as a search result value ON THE BACK END, so those results will be easy to grey out / disable / hide using that (it's boolean). ALSO run checks to make sure EVERY OTHER BACKEND search result meta data field is filled in (OTHERWISE SKIP SHOWING THAT MARKET AS AN OPTION TO ADD, AND WRITE TO THE ERROR LOG ABOUT IT).
-
-
-Make it so adding AT LEAST ONE CoinGecko market automatically adds a link to the asset's CoinGecko page (if it was NOT already added yet for that asset). ONLY CoinGecko search results have 'mcap_slug' set (as that is the only RELIABLE way to get the correct slug), so just scan for 'mcap_slug' in search results to auto-add it, when selecting / confirming the addition of new asset markets via the admin interface.
-
-
 Have a preview / confirmation step, AFTER selecting searched markets results, to have the end user confirm / cancel:
 
 1) The ASSET TICKER
@@ -246,9 +233,6 @@ Have a preview / confirmation step, AFTER selecting searched markets results, to
 3) The EXCHANGE NAME(S) 
 
 4) The MARKET ID(S) 
-
-
-If the 'add asset market' search result does NOT return a PAIRING VALUE, WE LOG THIS AS AN ERROR IN $ct['api']->market_id_parse() WITH DETAILS, AND ****DO NOT DISPLAY IT**** AS A RESULT TO THE ****END USER INTERFACE****. We DO NOT want to COMPLETELY block it from the 'under the hood' results array output, BECAUSE WE NEED TO KNOW FROM ERROR DETECTION / LOGS WHAT WE NEED TO PATCH / FIX IN $ct['api']->market_id_parse(), TO PROPERLY PARSE THE PAIRING FOR THIS PARTICULAR SEARCH / FUNCTION CALL.
 
 
 Look into "tooltips" / "more information on hover info icon", for jstree showing more information on an entry:
