--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -192,10 +192,13 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+If we are just adding new markets to an EXISTING ASSET, we should check and see the EXISTING VALUES FOR 'name' AND 'mcap_slug'. Figure out a stable algo for what values to use IF WE ARE ADDING A NEW COINGECKO MARKET via interface. 
+
+
+For Kraken (or any other exchange with an "all markets" API endpoint structure), we don't need to bother adding any "search" API endpoint, since THE MARKET ENDPOINT GIVES US ALL MARKETS IN ONE CALL. 
+
+
 Add checks for 'presale usd', for skipping already-added asset markets, when searching for asset markets to add on the portfolio assets admin page. Currently, it's NOT skipping already-added presale markets.
-
-
-Register / intergrate Kraken's 'search' API endpoint: https://api.kraken.com/0/public/AssetPairs
 
 
 TORTURE TEST all the different combinations of add market search on the 'portfolio assets' page, in the admin interface.
@@ -213,6 +216,8 @@ On the portfolio updates user area page, AND the portfolio assets admin page, in
 For the "portfolio assets" admin page, move the "wizard" into a large text link at the top of the page named "Add / Remove Asset Markets", and add a pretty simplified data table formatted list of each asset below that link (NOT editable, just for review of existing assets), with the following data columns for each row of data:
 
 Name (EDITABLE, see details below...)
+
+Mcap Slug (EDITABLE)
 
 Ticker
 
@@ -575,7 +580,7 @@ Have it display on the 'more stats' page
 Use the 'usd asset comparision' chart template...different chains are in place of the assets, the telemetry items in place of the time period options.
 
 
-Consider bundling all the BELOW charts we want to add to the "more stats" page (arbitrage etc) into a "addon-chart-stats" plugin (UI name "Additional Chart Stats"). This will help to flesh out the plugin system, and give insight into any additional requirements that should be added to it.
+For the "arbitrage" "other stats" chart we already have spec'ed out directly below, build it out within it's own plugin. Additionally, have threshold alerts for each asset's markets in the same plugin, if the spread between the market prices gets beyond a certain percentage difference for that asset.
 
 
 On 'more stats' page, have a 'market comparison stats' chart for arbitrage on one asset (picked from dropdown menu), with default showing All pair's markets, with USD conversion. Make it a bar chart, based off the marketcap chart template. Have 3 drop-down menus: Asset, Pair (with an All option), Primary Currency (conversion). Looping through asset pairs / markets should be a straight forward algo that does the job.
